--- a/home.html
+++ b/home.html
@@ -1,5 +1,14 @@
 <html>
 
-hlo
+<head>
+	
+	<link rel="stylesheet" type="text/css" href="home_style.css">
+</head>
+
+<body>
+	
+	<h1 id="heading">SHG</h1>
+
+</body>
 
 </html>
