--- a/home.html
+++ b/home.html
@@ -3,11 +3,22 @@
 <head>
 	
 	<link rel="stylesheet" type="text/css" href="home_style.css">
+
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&family=Yellowtail&display=swap&family=Homemade+Apple&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-	
-	<h1 id="heading">SHG</h1>
+
+	<div id="heading">SHG</div>
+
+
+	<div id="subheading">Some Hot Girls</div>
+
+
+
+
 
 </body>
 
